# openai_bot

./: .env.simple  Dockerfile  docker-compose.yaml  endpoints.http  entrypoint.sh  manage.py  pyproject.toml
clientHook/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
clientHook/apps/telegram/: admin.py  apps.py  models.py  openai.py  views.py
clientHook/apps/telegram/migrations/: 0001_initial.py
clientHook/apps/telegram/openai/: conversation.py  settings.py  utils.py
clientHook/apps/telegram/telegram_bot/: base.py  handlers.py  middleware.py  settting.py  utils.py
clientHook/telegram_bot/: base.py  handlers.py  settting.py
nginx/: Dockerfile  default.conf
