[tool.poetry]
name = "clienthook"
version = "0.1.0"
description = ""
authors = ["Teri Anric <2005ahi2005@gmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
aiogram = "^3.8.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
